k8s/03-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-destinationrule
spec:
  host: nginx-service # Kubernetes Service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN # Default. For all subsets. other type: RANDOM
  subsets:
    - name: v1
      labels:
        version: A
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN # a specific load balancer. uUse one specific for this subset
    - name: v2
      labels:
        version: B
        # This one wil use the default one, specified above.
