k8s/consistent-hash.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
spec:
  hosts: 
  - nginx-service
  http:
    - route:  
      - destination:
          host: nginx-service
          subset: all

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-destinationrule
spec:
  host: nginx-service # Kubernetes Service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "x-user" # everytime that the user send this header, the istio will generate a hash for the header value and will always forward to the same version (the first one)
  subsets:
    - name: all
      labels:
        app: nginx
