k8s/fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
spec:
  hosts: 
  - nginx-service
  http:
    - fault:
        #delay: 
         # fixedDelay: 10s # every http call will have a delay of 10 seconds
          #percentage: 
           # value: 100 # 100% of the traffic
        abort: # will return 500
          httpStatus: 500
          percentage: 
            value: 100 # for 100% of all the http status
      route:  
      - destination:
          host: nginx-service
          subset: all

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-destinationrule
spec:
  host: nginx-service # Kubernetes Service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "x-user" # everytime that the user send this header, the istio will generate a hash for the header value and will always forward to the same version (the first one)
  subsets:
    - name: all
      labels:
        app: nginx
