k8s/ingress-gateway-prefix.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port: 
        number: 80 # Everytime that we access the 80 port, through the domain under.
        name: http
        protocol: http2
      hosts:
      - "*" # domain
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts: 
  - "*"
  gateways:
  - ingress-gateway-k3s # need this to the ingress gateway access this virtual service
  http:
    - match:
      - uri:
          prefix: "/b" # will redirect the url /b to v1
      route:
        - destination:
           host: nginx-service
           subset: v1

    - match:
      - uri:
          prefix: "/" # will redirect the url / to v2
      route:
      - destination:
          host: nginx-service
          subset: v2

    - route:  
      - destination:
          host: nginx-service
          subset: v1
        weight: 0
      - destination:
          host: nginx-service
          subset: v2
        weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1
      labels:
        version: A
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: B
